--- a/app/views/m.header.html
+++ b/app/views/m.header.html
@@ -1,25 +1,25 @@
 <header class="m-header-fixed" ng-controller="headerCntl">
     <div class="col-sm-12 col-xs-12 no-padding-hr m-header-background ">
-        <i ng-click="openNav()" class="glyphicon glyphicon-menu-hamburger m-font-size-logo m-header-text-color"></i>
-        <!-- <img id="m-logo" src="images/logo-white-44.png" alt="logo" height="45" /> -->
-        <span class="m-font-size-logo m-header-text-color">Mobibooks</span>
-
+        <img ng-click="openNav()" src="images/menu.png" alt="logo" height="45" />
+        <span class="m-font-size-companyName m-header-text-color">{{screenName}}</span>
+        <span style="margin-left:50px;display:block;margin-top:-15px;" class="m-header-text-color">{{selected_company_name}}</span>
         <div id="transparentView" class="transparentView" ng-click="closeNav()">
         </div>
         <div id="mySidenav" class="sidenav">
-            <div class="m.usertabmenu" style="height:150px;background-color:#1fa9cc;">
+            <div class="m.usertabmenu">
                 <div style="padding:10px;">
                     <img id="m-logo" src="images/user-icon.png" height="70px" alt="logo" />
                 </div>
                 <div style="text-align: left;padding-left:15px;">
-                    <span style="font-style: italic;font-weight: 200;font-size: 15px;line-height: 25px;color: white;display: block;" class="m.loggedinuser">{{name}}</span>
-                    <span style="font-style: italic;font-weight: 200;font-size: 15px;line-height: 25px;color: white;display: block;" class="m.loggedinuser">{{mobile}}</span>
+                    <span class="m-loggedinuser">{{name}}</span>
+                    <span class="m-loggedinuser">{{mobile}}</span>
                 </div>
             </div>
             <a style="font-size:23px;" ng-click="homeAction()">Home</a>
-            <a style="font-size:23px;">Balance Sheet</a>
-            <a style="font-size:23px;">Profit & Loss Statment</a>
-            <a style="font-size:23px;">Directory</a>
+            <a style="font-size:23px;" ng-click="balanceSheetAction()">Balance Sheet</a>
+            <a style="font-size:23px;" ng-click="profitAndLossAction()">Profit & Loss Statment</a>
+            <a style="font-size:23px;" ng-click="usersPageAction()">Directory</a>
+            <a style="font-size:23px;" ng-click="locationsPageAction()">Locations</a>
             <a style="font-size:23px;" ng-click="clientLogout()">Logout</a>
         </div>
     </div>
