adding logout functionality to the home page

--- a/app/views/m.header.html
+++ b/app/views/m.header.html
@@ -6,7 +6,7 @@
         <div id="transparentView" class="transparentView" ng-click="closeNav()">
         </div>
         <div id="mySidenav" class="sidenav">
-            <div class="m.usertabmenu">
+            <div class="m-usertabmenu">
                 <div style="padding:10px;">
                     <img id="m-logo" src="images/user-icon.png" height="70px" alt="logo" />
                 </div>
