phone call bug fix in users screen

--- a/app/views/m.company.html
+++ b/app/views/m.company.html
@@ -15,3 +15,7 @@
         </ul>
     </div>
 </div>
+<div ng-show="loading" class="load text-center ">
+    <img class="spinner " src="images/ajax-loader.gif " width="60" height="60 ">
+    <h4 class="loading_msg ">Loading Please Wait...</h4>
+</div>
