--- a/app/views/m.location.html
+++ b/app/views/m.location.html
@@ -12,9 +12,13 @@
         <ul ng-repeat="location in locationsList" class="list-styles no-padding-hr">
             <li class="m-custom-content-border m-list-align-left">
                 <span class="m-main-field" ng-click="dashboardAction(location)">{{location.display_name}}</span>
-                <a ng-show="location.mobile" href="tel:location.mobile" class="glyphicon glyphicon-earphone pull-right m-phoneNumber"></a>
+                <a ng-show="location.mobile" href="tel:{{location.mobile}}" class="glyphicon glyphicon-earphone pull-right m-phoneNumber"></a>
                 <span class="m-sub-field">{{location.mobile}}</span>
             </li>
         </ul>
     </div>
+</div>
+<div ng-show="loading" class="load text-center ">
+    <img class="spinner " src="images/ajax-loader.gif " width="60" height="60 ">
+    <h4 class="loading_msg ">Loading Please Wait...</h4>
 </div>
