--- a/app/views/company.html
+++ b/app/views/company.html
@@ -251,7 +251,7 @@
     </div>
 </div>
 
-<div id="smsModal" class="modal fade" data-backdrop="static" data-keyboard="false" role="dialog">
+<div id="smsModal" class="modal fade" data-backdrop="static" data-keyboard="false" role="dialog" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content mdl-margin">
             <div class="modal-header no-padding-vr-bottom">
@@ -277,11 +277,44 @@
             <div class="modal-footer">
                 <div class="row no-margin-hr">
                     <div class="col-md-5 pull-right no-padding-hr">
+                        <button type="button" class="btn background-defalt save-cancel-button" ng-click="historyDetails()" data-dismiss="modal">History</button>
                         <button type="button" class="btn background-defalt save-cancel-button" data-dismiss="modal">Cancel</button>
                         <button type="button" class="btn background-defalt save-cancel-button tabicon" ng-click="saveSmsSettingtoSever()">Save</button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div id="smshistory" class="modal fade" data-backdrop="static" data-keyboard="false">
+        <div class="modal-dialog">
+            <div class="modal-content mdl-margin">
+                <div class="modal-header no-padding-vr-bottom">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h2 class="modal-title">Sms History</h2>
+                </div>
+                <div class="modal-body no-padding-vr-bottom">
+                    <div class="row no-margin-hr">
+                        <div class="col-md-12">
+                            <table ng-table="smshistorytable" class="table table-bordered smshistorytable">
+                                <tr ng-repeat="user in $data ">
+                                    <td class="vertical-center" title=" 'Date' " sortable=" 'date' ">
+                                        {{user.date}}</td>
+                                    <td class="vertical-center" title=" 'Name' " sortable=" 'name' ">
+                                        {{user.name}}</td>
+                                    <td class="vertical-center" title=" 'Update details' " sortable=" 'comment' ">
+                                        {{user.comment}}</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="row no-margin-hr">
+                    </div>
+                </div>
+        
+             </div>
     </div>
 </div>
