--- a/app/views/roles.html
+++ b/app/views/roles.html
@@ -9,7 +9,7 @@
         <div class="col-md-12">
             <table ng-table="multiroletbl" class="table table-bordered" show-filter="searchEnable">
                 <tr ng-repeat="user in $data">
-                    <td class="vertical-center" title="'Role'" filter="{ display_name: 'text'}" sortable="'display_name'">
+                    <td class="vertical-center" title="'Role'" filter="{ name: 'text'}" sortable="'display_name'">
                         <a class="tbl-link main-field-block">{{user.display_name}}</a>
                     </td>
                     <td class="vertical-center" title="'Users'" filter="{ users: 'users_count'}" sortable="'users_count'">
