--- a/app/views/m.company.html
+++ b/app/views/m.company.html
@@ -1,7 +1,7 @@
 <header class="m-header-fixed" ng-controller="headerCntl">
     <div class="col-sm-12 col-xs-12 no-padding-hr m-header-background ">
         <img id="m-logo" src="images/logo-white-44.png" alt="logo" height="45" />
-        <span class="m-font-size-logo-name m-header-text-color">Mobibooks</span>
+        <span class="m-font-size-logo-name m-header-text-color">Companies</span>
         <span ng-click="clientLogout()" class="glyphicon glyphicon-off m-header-text-color pull-right m-logout-button"></span>
     </div>
 </header>
