logout icon changed,functionality for balance sheet change dates.

--- a/app/views/m.company.html
+++ b/app/views/m.company.html
@@ -2,7 +2,7 @@
     <div class="col-sm-12 col-xs-12 no-padding-hr m-header-background ">
         <img id="m-logo" src="images/logo-white-44.png" alt="logo" height="45" />
         <span class="m-font-size-logo-name m-header-text-color">Companies</span>
-        <span ng-click="clientLogout()" class="glyphicon glyphicon-off m-header-text-color pull-right m-logout-button"></span>
+        <img ng-click="clientLogout()" src="images/logout.png" class="pull-right" style="margin:13px"></img>
     </div>
 </header>
 <div class="row no-margin-hr" style="margin-top:55px">
